Refactor (prepare) before Spring Update
- formatted